--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "gulp": "~3.9.1",
     "babelify": "~7.2.0",
     "vinyl-source-stream": "~1.1.0"
+  },
+  "dependencies": {
+    "react": "~0.14.7"
   }
 }
