--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vinyl-source-stream": "~1.1.0"
   },
   "dependencies": {
-    "react": "~0.14.7"
+    "react": "~0.14.7",
+    "react-dom": "^0.14.7"
   }
 }
