--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "url": "https://github.com/carlosbello/snapterest/issues"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "~7.2.0",
     "browserify": "~13.0.0",
     "gulp": "~3.9.1",
-    "babelify": "~7.2.0",
     "vinyl-source-stream": "~1.1.0"
   },
   "dependencies": {
